--- a/Strahovanie/src/sass/components/insurance-arrange.scss
+++ b/Strahovanie/src/sass/components/insurance-arrange.scss
@@ -12,11 +12,14 @@
 :root {
   --swiper-theme-color: #4268B2;
 }
+.swiper-slide{
+  padding-bottom: 50px;
+}
 
 
 .arrange {
   background-color: #F8FBFE;
-  padding: 90px 0 100px 0;
+  padding: 90px 0 50px 0;
   position: relative;
 
   &__header {
@@ -116,7 +119,6 @@
   max-width: 1050px;
   background: url('../icons/Intersect_opacity.svg') no-repeat;
   background-position: 2% 90%;
-  overflow-x: hidden;
 
   &__wrapper {
     display: flex;
