confince without slider

--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "components/footer.scss";
 
 @import "components/insurance-arrange.scss";
+@import "components/confidence.scss";
 
 // offers
 @import "components/offers/greencard.scss";
