--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -595,6 +595,127 @@ body {
   opacity: 0.8;
 }
 
+.confirence__swiper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.confirence__navigation {
+  max-width: 320px;
+}
+
+.confirence__header {
+  color: #001237;
+  margin-bottom: 105px;
+}
+
+.confirence__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100px;
+  width: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.confirence__btn {
+  background-color: #2155CF;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.confirence__wrapper {
+  max-width: 1140px;
+  overflow: hidden;
+  padding: 90px 0 100px 0;
+}
+
+.review {
+  width: 360px;
+  -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  border-radius: 10px;
+}
+
+.review__card {
+  padding: 27px 30px 44px 26px;
+}
+
+.review__rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 19px;
+}
+
+.review__star:not(:last-child) {
+  margin-right: 5px;
+}
+
+.review__text {
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.4375;
+  color: #263238;
+  opacity: 0.8;
+  margin-bottom: 35px;
+}
+
+.author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.author__photo {
+  margin-right: 30px;
+}
+
+.author__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 5px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.author__name {
+  color: #263238;
+  font-size: 20px;
+  line-height: 1.2;
+  font-family: "Proxima Nova";
+  font-weight: 600;
+}
+
+.author__time {
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4285714286;
+  color: #C0C2C3;
+}
+
 .greencard {
   background-color: #F1F8FE;
   padding: 60px 0;
