--- a/Strahovanie/src/sass/components/confidence.scss
+++ b/Strahovanie/src/sass/components/confidence.scss
@@ -1,26 +1,26 @@
 .confirence {
 
-//   // .confirence__swiper
-
   &__swiper {
-    display: flex;
-    justify-content: space-between;
+    max-width: 1210px;
+    padding: 40px 35px 0px 35px;
+    padding-top: 40px;
+    overflow: hidden;
   }
 
-//   // .confirence__navigation
+  &__container{
+    max-width: 1610px;
+    padding-left: 40px;
+  }
 
   &__navigation {
-    max-width: 320px;
+    width: 320px;
+    padding-top: 40px;
   }
-
-//   // .confirence__header
 
   &__header {
     color: $blue-dark;
     margin-bottom: 105px;
   }
-
-//   // .confirence__nav
 
   &__nav {
     display: flex;
@@ -28,8 +28,6 @@
     width: 100%;
     justify-content: space-between;
   }
-
-//   // .confirence__btn
 
   &__btn {
     background-color: $blue;
@@ -42,30 +40,12 @@
     cursor: pointer;
   }
 
-//   // .confirence__prev
-
-//   &__prev {}
-
-//   // .confirence__next
-
-//   &__next {}
-
-//   // .confirence__wrapper
-
   &__wrapper {
-    max-width: 1140px;
-    overflow: hidden;
-    padding: 90px 0 100px 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0px;
   }
 }
-
-// .container {}
-
-// .header {}
-
-// .swiper-wrapper {}
-
-// .swiper-slide {}
 
 .review {
   width: 360px;
@@ -77,22 +57,16 @@
     padding: 27px 30px 44px 26px;
   }
 
-//   // .review__rating
-
   &__rating {
     display: flex;
     margin-bottom: 19px;
   }
-
-//   // .review__star
 
   &__star {
     &:not(:last-child){
       margin-right: 5px;
     }
   }
-
-//   // .review__text
 
   &__text {
     font-family: 'Proxima Nova';
@@ -102,22 +76,14 @@
     opacity: 0.8;
     margin-bottom: 35px;
   }
-
-//   // .review__author
-
-//   &__author {}
 }
 
 .author {
   display: flex;
 
-  // .author__photo
-
   &__photo {
     margin-right: 30px;
   }
-
-  // // .author__info
 
   &__info {
     display: flex;
@@ -125,16 +91,12 @@
     flex-direction: column;
   }
 
-  // // .author__name
-
   &__name {
     color: $gray-blue;
     @include font(20px, 24px);
     font-family: 'Proxima Nova';
     font-weight: 600;
   }
-
-  // // .author__time
 
   &__time {
     font-family: 'Proxima Nova';
