--- a/Strahovanie/src/sass/components/insurance-case.scss
+++ b/Strahovanie/src/sass/components/insurance-case.scss
@@ -1,7 +1,14 @@
 .insurance {
-  padding: 90px 0;
 
-  &__wrapper {
+  &__container{
+    max-width: 1620px;
+  }
+
+  &__wrapper{
+    padding: 100px 45px 80px 45px;
+  }
+
+  &__inner {
     background-color: #072D85;
     border-radius: 12px;
     filter: drop-shadow(0px 4px 46px rgba(123, 139, 181, 0.22));
