--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -13,6 +13,7 @@
 
 @import "components/insurance-arrange.scss";
 @import "components/confidence.scss";
+@import "components/faq.scss";
 
 // offers
 @import "components/offers/greencard.scss";
