--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -728,6 +728,159 @@ body {
   color: #C0C2C3;
 }
 
+.faq__container {
+  max-width: 1300px;
+  overflow: visible;
+}
+
+.faq__header {
+  color: #001237;
+  text-align: center;
+  margin-bottom: 45px;
+}
+
+.accordeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 4px 46px rgba(161, 168, 188, 0.22);
+  box-shadow: 0px 4px 46px rgba(161, 168, 188, 0.22);
+  border-radius: 8px;
+}
+
+.accordeon__wrapper {
+  position: relative;
+}
+
+.accordeon__wrapper_active {
+  background-color: #F8FBFE;
+}
+
+.accordeon__wrapper_active::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 4px;
+  background-color: #2155CF;
+}
+
+.accordeon__trigger {
+  padding: 32px 40px;
+}
+
+.trigger {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #D7E1E9;
+}
+
+.trigger__text {
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1;
+  color: #1A1B20;
+}
+
+.trigger__text_active {
+  background-color: #F8FBFE;
+}
+
+.trigger__btn {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  border: 1px solid #D7E1E9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.trigger__btn_active {
+  background-color: #2155CF;
+  border-color: #2155CF;
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.trigger__btn_active > svg > path {
+  stroke: #FFFFFF;
+}
+
+.answer {
+  padding: 35px 0 40px 40px;
+  display: none;
+}
+
+.answer_active {
+  display: block;
+}
+
+.answer__text {
+  max-width: 1100px;
+  color: #000000;
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6875;
+  opacity: 0.8;
+  margin-bottom: 23px;
+}
+
+.answer__item {
+  padding-left: 28px;
+  position: relative;
+}
+
+.answer__item::before {
+  position: absolute;
+  left: 0;
+  top: 10%;
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 4px solid #2155CF;
+}
+
+.answer__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.answer__item > span {
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.1111111111;
+  color: #263238;
+}
+
 .greencard {
   background-color: #F1F8FE;
   padding: 60px 0;
