--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import "components/insurance-arrange.scss";
 @import "components/confidence.scss";
 @import "components/faq.scss";
+@import "components/insurance-online.scss";
 
 // offers
 @import "components/offers/greencard.scss";
