--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -880,6 +880,70 @@ body {
   color: #263238;
 }
 
+.description {
+  padding-bottom: 90px;
+}
+
+.description__container {
+  max-width: 1300px;
+  position: relative;
+}
+
+.description__container::after {
+  position: absolute;
+  content: "";
+  height: 70px;
+  width: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(28.73%, #FFFFFF), to(rgba(255, 255, 255, 0)));
+  background: -o-linear-gradient(bottom, #FFFFFF 28.73%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(360deg, #FFFFFF 28.73%, rgba(255, 255, 255, 0) 100%);
+  bottom: 0;
+  left: 0;
+}
+
+.description__header {
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2222222222;
+  color: #001237;
+  margin-bottom: 15px;
+}
+
+.description__content {
+  max-height: 295px;
+  overflow-y: scroll;
+  position: relative;
+}
+
+.description__content::-webkit-scrollbar {
+  width: 10px;
+}
+
+.description__content::-webkit-scrollbar-track {
+  border: 4px solid #FFFFFF;
+  width: 2px;
+  background-color: #F3F4F5;
+}
+
+.description__content::-webkit-scrollbar-thumb {
+  background: #265FD1;
+  border-radius: 5px;
+}
+
+.description__text {
+  color: #263238;
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4375;
+  opacity: 0.8;
+}
+
+.description__text:not(:last-child) {
+  margin-bottom: 35px;
+}
+
 .greencard {
   background-color: #F1F8FE;
   padding: 60px 0;
