--- a/Strahovanie/src/sass/components/offers/greencard.scss
+++ b/Strahovanie/src/sass/components/offers/greencard.scss
@@ -3,7 +3,7 @@
   padding: 60px 0;
 
   &__header {
-    padding: 30px 40px;
+    padding: 31px 41px;
     color: $blue-dark;
   }
 
@@ -11,12 +11,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 40px;
+    padding: 24px 40px;
     border-top: 1px solid #CFDAE2;
   }
 
   &__list {
     display: flex;
+  }
+
+  &__options{
+    max-height: 43px;
   }
 
   &__item {
@@ -33,7 +37,7 @@
     padding: 20px 63px;
     border: 2px solid $blue;
     >span{
-      margin-left: 5px;
+      margin-left: 6px;
     }
     &:hover{
       color: $white;
@@ -58,16 +62,19 @@
 .options {
 
   &__header {
-    font-family: "Proxima Nova";
+    font-family: $font-main;
     font-weight: normal;
     @include font(16px, 19px);
     color: $gray-blue;
+    display: flex;
   }
 
   &__value {
-    font-family: "Proxima Nova";
+    font-family: $font-main;
     font-weight: 600;
     @include font(18px, 29px);
     color: $blue-dark;
+    max-height: 23px;
+    margin-top: 3px;
   }
 }
