--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -1081,10 +1081,7 @@ body {
   font-size: 30px;
   line-height: 0.7333333333;
   color: #001237;
-}
-
-.offer__list {
-  margin-top: 7px;
+  padding-bottom: 5px;
 }
 
 .sorting {
@@ -1136,13 +1133,24 @@ body {
 }
 
 .proposals {
-  padding: 80px 0;
+  padding: 50px 0;
   background-color: #F1F8FE;
 }
 
 .proposals__wrapper {
+  margin: 30px auto;
+  position: relative;
+}
+
+.proposals__wrapper::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
   -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  top: 0;
+  left: 0;
 }
 
 .proposals__item:not(:last-child) {
@@ -1150,18 +1158,48 @@ body {
 }
 
 .proposal {
+  position: relative;
+  z-index: 10;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 44px 0;
-  margin-left: 55px;
-  margin-right: 40px;
+  padding: 38px 0;
+  margin-left: 54px;
+  margin-right: 38px;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  height: 120px;
+}
+
+.proposal__vuso {
+  width: 131px;
+  height: 32px;
+  background: url("../img/offers/vuso.svg") no-repeat;
+}
+
+.proposal__upsk {
+  width: 131px;
+  height: 29px;
+  background: url("../img/offers/upsk.svg") no-repeat;
+  margin-top: -3px;
+}
+
+.proposal__asko {
+  width: 131px;
+  height: 34px;
+  background: url("../img/offers/asko.svg") no-repeat;
+  margin-top: -4px;
+}
+
+.proposal__oranta {
+  width: 121px;
+  height: 45px;
+  background: url("../img/offers/oranta.svg") no-repeat;
+  margin-top: -20px;
 }
 
 .characteristic {
@@ -1171,10 +1209,15 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-top: -2px;
 }
 
 .characteristic__item:not(:last-child) {
-  margin-right: 70px;
+  margin-right: 72px;
+}
+
+.characteristic__item.characteristic__price {
+  margin-right: 78px;
 }
 
 .characteristic__stars {
@@ -1184,6 +1227,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-top: -2px;
 }
 
 .characteristic__star:not(:last-child) {
@@ -1194,8 +1238,9 @@ body {
   font-family: "Proxima Nova";
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.1875;
+  line-height: 1.218125;
   color: #263238;
+  padding-right: 10px;
 }
 
 .characteristic__sum {
@@ -1225,28 +1270,27 @@ body {
 .characteristic__price_old {
   position: absolute;
   bottom: -25px;
-  color: #263238;
-  opacity: 0.5;
+  color: rgba(38, 50, 56, 0.5);
 }
 
 .characteristic__price_old::after {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 81px;
   height: 1px;
   background-color: #AEAEAE;
   -webkit-transform: rotate(-8.24deg);
   -ms-transform: rotate(-8.24deg);
   transform: rotate(-8.24deg);
-  bottom: 50%;
-  left: 0;
+  bottom: 45%;
+  left: -2px;
 }
 
 .characteristic__button {
   border: none;
   background-color: #FF9504;
-  padding: 14px 45px;
-  margin-left: 10px;
+  padding: 14px 44px 14px 46px;
+  margin-top: 1px;
 }
 
 .characteristic__button > span {
