--- a/Strahovanie/src/sass/components/offers/offers.scss
+++ b/Strahovanie/src/sass/components/offers/offers.scss
@@ -21,10 +21,7 @@
     font-weight: 600;
     @include font(30px, 22px);
     color: $blue-dark;
-  }
-
-  &__list{
-    margin-top: 7px;
+    padding-bottom: 5px;
   }
 }
 
