--- a/Strahovanie/src/sass/components/offers/proposal.scss
+++ b/Strahovanie/src/sass/components/offers/proposal.scss
@@ -1,41 +1,88 @@
 .proposals {
-  padding: 80px 0;
+  padding: 50px 0;
   background-color: $blue-pale;
 
-    &__wrapper {
+  &__wrapper {
+    margin: 30px auto;
+    position: relative;
+    &::before{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      content: '';
       box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+      top: 0;
+      left: 0;
     }
+  }
 
-    &__item:not(:last-child) {
-      margin-bottom: 30px;
-    }
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
 }
 
 
 
 .proposal {
+  position: relative;
+  z-index: 10;
   display: flex;
   align-items: center;
-  padding: 44px 0;
-  margin-left: 55px;
-  margin-right: 40px;
+  padding: 38px 0;
+  margin-left: 54px;
+  margin-right: 38px;
   justify-content: space-between;
+  height: 120px;
+
+  &__vuso {
+    width: 131px;
+    height: 32px;
+    background: url("../img/offers/vuso.svg") no-repeat;
+  }
+
+  &__upsk{
+    width: 131px;
+    height: 29px;
+    background: url("../img/offers/upsk.svg") no-repeat;
+    margin-top: -3px;
+  }
+
+  &__asko {
+    width: 131px;
+    height: 34px;
+    background: url("../img/offers/asko.svg") no-repeat;
+    margin-top: -4px;
+  }
+  &__oranta {
+    width: 121px;
+    height: 45px;
+    background: url("../img/offers/oranta.svg") no-repeat;
+    margin-top: -20px;
+  }
 }
+
+
 
 .characteristic {
   display: flex;
   align-items: center;
+  margin-top: -2px;
 
 
   &__item {
     &:not(:last-child){
-      margin-right: 70px;
+      margin-right: 72px;
+    }
+    &.characteristic__price{
+      margin-right: 78px;
     }
   }
 
   &__stars {
     display: flex;
     align-items: center;
+    margin-top: -2px;
   }
 
   &__star {
@@ -47,8 +94,9 @@
   &__name {
     font-family: 'Proxima Nova';
     font-weight: normal;
-    @include font(16px, 19px);
+    @include font(16px, 19.49px);
     color: $gray-blue;
+    padding-right: 10px;
   }
 
   &__sum {
@@ -70,17 +118,16 @@
     &_old {
       position: absolute;
       bottom: -25px;
-      color: $gray-blue;
-      opacity: 0.5;
+      color: rgba(38, 50, 56, 0.5);
       &::after{
         content: '';
         position: absolute;
-        width: 100%;
+        width: 81px;
         height: 1px;
         background-color: #AEAEAE;
         transform: rotate(-8.24deg);
-        bottom: 50%;
-        left: 0;
+        bottom: 45%;
+        left: -2px;
       }
     }
   }
@@ -88,8 +135,8 @@
   &__button {
     border: none;
     background-color: $orange;
-    padding: 14px 45px;
-    margin-left: 10px;
+    padding: 14px 44px 14px 46px;
+    margin-top: 1px;
     >span{
       color: $white;
       @include font(14px, 14px);      
