--- a/Strahovanie/src/sass/components/offers/proposal.scss
+++ b/Strahovanie/src/sass/components/offers/proposal.scss
@@ -92,7 +92,7 @@
   }
 
   &__name {
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: normal;
     @include font(16px, 19.49px);
     color: $gray-blue;
@@ -100,7 +100,7 @@
   }
 
   &__sum {
-  font-family: 'Proxima Nova';
+  font-family: $font-main;
   font-weight: normal;
   @include font(18px, 22px);
   color: $gray-blue;
@@ -110,7 +110,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 700;
     @include font(18px, 22px);
     color: $gray-blue;
