--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -309,7 +309,7 @@ body {
 .footer {
   background-color: #F1F8FE;
   padding-top: 80px;
-  padding-bottom: 60px;
+  padding-bottom: 50px;
 }
 
 .footer__wrapper {
@@ -359,7 +359,7 @@ body {
 }
 
 .basement {
-  padding-top: 50px;
+  padding-top: 45px;
 }
 
 .basement__list {
@@ -375,6 +375,7 @@ body {
 }
 
 .basement__copyright {
+  margin-top: -2px;
   font-family: "Proxima Nova";
   font-size: 14px;
   line-height: 1.7142857143;
@@ -382,6 +383,8 @@ body {
 }
 
 .basement__contacts {
+  margin-top: -7px;
+  margin-left: 105px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -417,6 +420,7 @@ body {
 }
 
 .basement__dev {
+  margin-top: 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1217,7 +1221,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: -2px;
+  margin-top: -4px;
 }
 
 .characteristic__item:not(:last-child) {
