--- a/Strahovanie/src/sass/components/footer.scss
+++ b/Strahovanie/src/sass/components/footer.scss
@@ -1,9 +1,7 @@
 .footer {
   background-color: $blue-pale;
   padding-top: 80px;
-  padding-bottom: 60px;
-
-//   // .footer__wrapper
+  padding-bottom: 50px;
 
   &__wrapper {
     display: flex;
@@ -12,43 +10,29 @@
     border-bottom: 1px solid $gray;
   }
 
-//   // .footer__logotype
-
   &__logotype {
     margin-bottom: 60px;
   }
 
-//   // .footer__navigation
-
   &__navigation {
     margin-bottom: 52px;
   }
-
-//   // .footer__basement
-
-//   &__basement {}
 }
 
 .navigation {
-
-//   // .navigation__list
 
   &__list {
     display: flex;
   }
 
-//   // .navigation__item
-
   &__item:not(:last-child) {
     margin-right: 34px;
   }
 
-//   // .navigation__link
-
   &__link {
     color:$blue-dark;
     text-transform: uppercase;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     @include font(16px, 20px);
     font-weight: 600;
     letter-spacing: 0.08em;
@@ -59,9 +43,7 @@
 }
 
 .basement {
-  padding-top: 50px;
-
-//   // .basement__list
+  padding-top: 45px;
 
   &__list {
     display: flex;
@@ -69,26 +51,19 @@
     justify-content: space-between;
   }
 
-//   // .basement__item
-
-//   &__item {}
-
-//   // .basement__copyright
-
   &__copyright {
-    font-family: 'Proxima Nova';
+    margin-top: -2px;
+    font-family: $font-main;
     @include font(14px, 24px);
     color: $blue-dark;
   }
 
-//   // .basement__contacts
-
   &__contacts {
+    margin-top: -7px;
+    margin-left: 105px;
     display: flex;
     align-items: center;
   }
-
-//   // .basement__contact
 
   &__contact {
     &:not(:last-child){
@@ -96,8 +71,6 @@
     }
     
   }
-
-//   // .basement__link
 
   &__link {
     display: flex;
@@ -109,20 +82,19 @@
       }
     }
     color: $blue-dark;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: normal;
     @include font(18px, 22px);
   }
 
-//   // .basement__dev
-
   &__dev{
+    margin-top: 2px;
     display: flex;
     align-items: center;
   }
 
   &__text {
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: normal;
     @include font(14px, 23px);
     opacity: 0.9;
