--- a/Strahovanie/src/sass/components/contacts/callback.scss
+++ b/Strahovanie/src/sass/components/contacts/callback.scss
@@ -1,7 +1,6 @@
 .callback {
   background-color: #F8FBFE;
   padding: 70px 0 90px 0;
-  // .callback__header
 
   &__header {
     margin-bottom: 40px;
@@ -13,51 +12,39 @@
 .feed {
   display: flex;
 
-//   // .feed__form
-
   &__form {
+    margin-top: -3px;
     width: 490px;
     margin-right: 160px;
   }
-
-//   // .feed__instruction
-
-//   &__instruction {}
 }
 
 .feedback {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-//   // .feedback__list
-
-//   &__list {}
-
-//   // .feedback__item
 
   &__item {
     &:not(:last-child){
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
     & input{
       width: 100%;
     }
     & textarea {
       width: 100%;
-      height: 125px;
+      height: 124px;
       resize: none;
-      padding: 10px 15px;
+      padding: 10px 14px;
+      border: 1px solid #D7E1E9;
+      border-radius: 6px;
     }
   }
-
-//   // .feedback__person
 
   &__person {
     display: flex;
 
   }
-
-//   // .feedback__sender
 
   &__sender {
     &:not(:last-child){
@@ -68,26 +55,30 @@
     }
   }
 
-//   // .feedback__label
-
   &__label {
     color: $blue-dark;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 600;
-    @include font(16px, 26px)
+    @include font(16px, 26px);
+    display: inline-block;
+    height: 12px;
+    margin-bottom: 20px;
   }
 
   & input{
-    padding: 10px 15px;
+    padding: 10px 14px;
     border: 1px solid #D7E1E9;
     border-radius: 6px;
+    &::placeholder{
+      @include font(16px, 19px);
+      font-family: $font-main;
+      color: #9E9E9E;
+      opacity: 0.8;
+    }
   }
 
-
-//   // .feedback__btn
-
   &__btn {
-    margin-top: 32px;
+    margin-top: 28px;
     background-color: $orange;
     border: none;
     padding: 22px 55px;
@@ -105,35 +96,24 @@
   background-color: #353D52;
   border-radius: 12px;
   width: 695px;
-  height: 465px;
+  height: 464px;
   background-image: url('../icons/Intersect.svg');
   background-repeat: no-repeat;
   background-position: 140% -640%;
 
-
-//   // .instruction__wrapper
-
   &__wrapper {
-    padding: 65px 65px 75px 65px;
+    padding: 67px 64px 74px 64px;
   }
-
-//   // .instruction__header
 
   &__header {
     color: $white;
     margin-bottom: 30px;
   }
 
-//   // .instruction__list
-
-//   &__list {}
-
-//   // .instruction__item
-
   &__item {
     color: $white;
     @include font(24px,24px);
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 400;
     &:not(:last-child){
       margin-bottom: 20px;
@@ -146,8 +126,8 @@
       height: 3px;
       background-color: $white;
       position: absolute;
-      left: 0;
-      top: 45%;
+      left: -1px;
+      top: 35%;
     }
   }
 }
