--- a/Strahovanie/src/sass/components/about/insurance-types.scss
+++ b/Strahovanie/src/sass/components/about/insurance-types.scss
@@ -4,7 +4,8 @@
   &__header {
     color: $blue-dark;
     text-align: center;
-    margin-bottom: 45px;
+    margin-bottom: 43px;
+    @include font(46px, 55px);
   }
 }
 
@@ -49,7 +50,7 @@
     font-family: 'Proxima Nova';
     color: $white;
     margin-left: 24px;
-    margin-bottom: 24px;    
+    margin-bottom: 21px;    
   }
 
   &__gradient{
