--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -453,7 +453,7 @@ body {
 .swiper-pagination-progressbar.swiper-pagination-horizontal {
   height: 1px;
   left: 23.5%;
-  top: 25%;
+  top: 35%;
 }
 
 :root {
@@ -474,6 +474,8 @@ body {
   text-align: center;
   color: #001237;
   margin-bottom: 75px;
+  font-size: 46px;
+  line-height: 1.2173913043;
 }
 
 .swiper__nav {
@@ -481,7 +483,7 @@ body {
 }
 
 .switch {
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 
 .switch__menu {
@@ -495,11 +497,12 @@ body {
   -ms-flex-align: center;
   align-items: center;
   text-align: center;
-  max-width: 1010px;
+  max-width: 824px;
   margin: 0 auto;
 }
 
 .switch__item {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -571,26 +574,29 @@ body {
 }
 
 .switch__description {
+  min-width: 230px;
+  position: absolute;
   color: #9E9E9E;
   font-family: "Proxima Nova";
   font-weight: 600;
   font-size: 16px;
   line-height: 1.625;
+  bottom: -25px;
 }
 
 .step {
-  padding: 40px 65px 40px 90px;
   background-color: #FFFFFF;
   border-radius: 10px;
   -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
   margin: 0 auto;
   max-width: 1050px;
-  background: url("../icons/Intersect_opacity.svg") no-repeat;
-  background-position: 2% 90%;
+  height: 242px;
+  background-color: #FFFFFF;
 }
 
 .step__wrapper {
+  padding-right: 66px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -602,11 +608,19 @@ body {
   align-items: center;
 }
 
-.step__image {
-  border-right: 1px dashed #D9D9D9;
+.step__img {
+  height: 162px;
+  background: url("../icons/Intersect_opacity.svg") no-repeat;
+  background-position: 20% 70%;
+  padding: 32px 90px 40px 90px;
+  padding-right: 90px;
+  padding-left: 90px;
+  padding-bottom: 40px;
+  margin-top: 8px;
 }
 
 .step__content {
+  margin-top: -12px;
   max-width: 570px;
 }
 
@@ -616,7 +630,7 @@ body {
   font-size: 30px;
   line-height: 1.3;
   color: #001237;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
 }
 
 .step__text {
