--- a/Strahovanie/src/sass/components/insurance-arrange.scss
+++ b/Strahovanie/src/sass/components/insurance-arrange.scss
@@ -7,7 +7,7 @@
 .swiper-pagination-progressbar.swiper-pagination-horizontal{
   height: 1px;
   left: 23.5%;
-  top: 25%;
+  top: 35%;
 }
 :root {
   --swiper-theme-color: #4268B2;
@@ -26,6 +26,7 @@
     text-align: center;
     color: $blue-dark;
     margin-bottom: 75px;
+    @include font(46px, 56px)
   }
 }
 
@@ -37,18 +38,19 @@
 }
 
 .switch {
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 
   &__menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    max-width: 1010px;
+    max-width:824px;
     margin: 0 auto;
   }
 
   &__item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -103,48 +105,60 @@
   }
 
   &__description {
+    min-width: 230px;
+    position: absolute;
     color: #9E9E9E;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 600;
     @include font(16px, 26px);
+    bottom: -25px;
   }
 }
 
 .step {
-  padding: 40px 65px 40px 90px;
   background-color: $white;
   border-radius: 10px;
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
   margin: 0 auto;
   max-width: 1050px;
-  background: url('../icons/Intersect_opacity.svg') no-repeat;
-  background-position: 2% 90%;
+  height: 242px;
+  background-color: $white;
+  
 
   &__wrapper {
+    padding-right: 66px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  &__image {
-    border-right: 1px dashed #D9D9D9;
+  &__img{
+    height: 162px;
+    background: url('../icons/Intersect_opacity.svg') no-repeat;
+    background-position: 20% 70%;
+    padding: 32px 90px 40px 90px;
+    padding-right: 90px;
+    padding-left: 90px;
+    padding-bottom: 40px;
+    margin-top: 8px;
   }
 
   &__content {
+    margin-top: -12px;
     max-width: 570px;
   }
 
   &__header {
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 700;
     @include font(30px, 39px);
     color: $blue-dark;
-    margin-bottom: 15px;
+    margin-bottom: 17px;
   }
 
   &__text {
     color: #000;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: normal;
     @include font(16px, 27px);
     opacity: 0.8;
