--- a/Strahovanie/src/sass/components/confidence.scss
+++ b/Strahovanie/src/sass/components/confidence.scss
@@ -2,7 +2,7 @@
 
   &__swiper {
     max-width: 1210px;
-    padding: 40px 35px 0px 35px;
+    padding: 40px 35px 0px 47px;
     padding-top: 40px;
     overflow: hidden;
   }
@@ -19,7 +19,8 @@
 
   &__header {
     color: $blue-dark;
-    margin-bottom: 105px;
+    margin-bottom: 106px;
+    line-height: 56px;
   }
 
   &__nav {
@@ -27,6 +28,7 @@
     max-width: 100px;
     width: 100%;
     justify-content: space-between;
+    margin-left: 2px;
   }
 
   &__btn {
@@ -49,9 +51,9 @@
 
 .review {
   width: 360px;
+  height: 320px;
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
   border-radius: 10px;
-//   // .review__card
 
   &__card {
     padding: 27px 30px 44px 26px;
@@ -59,7 +61,8 @@
 
   &__rating {
     display: flex;
-    margin-bottom: 19px;
+    align-items: center;
+    margin-bottom: 18px;
   }
 
   &__star {
@@ -74,7 +77,7 @@
     @include font(16px, 23px);
     color: $gray-blue;
     opacity: 0.8;
-    margin-bottom: 35px;
+    margin-bottom: 38px;
   }
 }
 
@@ -96,6 +99,7 @@
     @include font(20px, 24px);
     font-family: 'Proxima Nova';
     font-weight: 600;
+    margin-bottom: 5px;
   }
 
   &__time {
