--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -784,9 +784,11 @@ body {
 }
 
 .faq__header {
+  margin-top: 1px;
   color: #001237;
   text-align: center;
   margin-bottom: 45px;
+  line-height: 56px;
 }
 
 .accordeon {
@@ -839,6 +841,7 @@ body {
 
 .accordeon__trigger {
   padding: 32px 40px;
+  max-height: 96px;
 }
 
 .trigger {
