--- a/Strahovanie/src/sass/components/faq.scss
+++ b/Strahovanie/src/sass/components/faq.scss
@@ -5,9 +5,11 @@
   }
 
   &__header {
+    margin-top: 1px;
     color: $blue-dark;
     text-align: center;
     margin-bottom: 45px;
+    line-height: 56px;
   }
 }
 
@@ -50,6 +52,7 @@
 
   &__trigger {
     padding: 32px 40px;
+    max-height: 96px;
   }
 }
 
@@ -64,7 +67,7 @@
   border-bottom: 1px solid #D7E1E9;
 
   &__text {
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 600;
     @include font( 22px, 22px);
     color: #1A1B20;
@@ -90,7 +93,7 @@
   &__text {
     max-width: 1100px;
     color: #000000;
-    font-family: 'Proxima Nova';
+    font-family: $font-main;
     font-weight: 400;
     @include font(16px, 27px);
     opacity: 0.8;
@@ -115,7 +118,7 @@
       margin-bottom: 16px;
     }
     >span{
-      font-family: 'Proxima Nova';
+      font-family: $font-main;
       font-weight: 600;
       @include font(18px, 20px);
       color: $gray-blue;
