--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -27,3 +27,6 @@
 // about
 @import "components/about/about-us.scss";
 @import "components/about/insurance-types.scss";
+
+//tourism
+@import "components/tourism/insurance-tourism.scss";
