--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -132,6 +132,20 @@ body {
   line-height: 1.0869565217;
 }
 
+.btn {
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1;
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  letter-spacing: 0.08em;
+}
+
+.btn > span {
+  text-transform: uppercase;
+}
+
 .header {
   border-bottom: 1px solid #D7E1E9;
 }
@@ -199,20 +213,6 @@ body {
   background-color: #2155CF;
   left: 0;
   bottom: -2px;
-}
-
-.btn {
-  border-radius: 50px;
-  cursor: pointer;
-  font-size: 16px;
-  line-height: 1;
-  font-family: "Proxima Nova";
-  font-weight: 600;
-  letter-spacing: 0.08em;
-}
-
-.btn > span {
-  text-transform: uppercase;
 }
 
 .insurance {
@@ -1664,4 +1664,305 @@ body {
 
 .belay__tourists {
   background: url("../img/insurance/tourists.jpg") no-repeat;
+}
+
+.tourism {
+  background-color: #F1F8FE;
+}
+
+.tourism__container {
+  padding: 50px;
+}
+
+.tourism__form {
+  max-width: 1072px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 32px rgba(123, 139, 181, 0.2);
+  box-shadow: 0px 4px 32px rgba(123, 139, 181, 0.2);
+  overflow: visible;
+}
+
+.touristic {
+  padding: 50px 31px;
+}
+
+.touristic__header {
+  font-size: 48px;
+  line-height: 1;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.touristic__input {
+  padding: 13px 21px 13px 16px;
+  border-radius: 6px;
+  border: 1px solid #D7E1E9;
+  font-size: 16px;
+  line-height: 1.1875;
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  color: #263238;
+  max-height: 46px;
+}
+
+.touristic__trip {
+  margin-bottom: 32px;
+}
+
+.touristic__tourists {
+  margin-bottom: 32px;
+}
+
+.touristic__add {
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
+
+.touristic__result {
+  margin: 0 auto;
+  display: block;
+  background-color: #FF9504;
+  border: none;
+  width: 410px;
+  height: 60px;
+}
+
+.touristic__result:hover {
+  background-color: #E28300;
+}
+
+.touristic__result > span {
+  color: #FFFFFF;
+}
+
+.trip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.trip__param {
+  font-family: "Proxima Nova";
+  font-size: 16px;
+  line-height: 1.625;
+  color: #001237;
+  font-weight: 600;
+}
+
+.direction {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 54.9%;
+}
+
+.direction__ways {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.direction__example {
+  color: #8D94A4;
+  font-size: 14px;
+  line-height: 1.6428571429;
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  margin-right: 9px;
+}
+
+.direction__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.direction__item > span {
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  color: #2155CF;
+  font-size: 14px;
+  line-height: 1;
+  cursor: pointer;
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.direction__item:not(:last-child) {
+  margin-right: 12px;
+}
+
+.period {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 42.2%;
+}
+
+.period__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.period__total {
+  color: #2155CF;
+  font-size: 14px;
+  line-height: 1.6428571429;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+}
+
+.period__choice {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.period__input {
+  width: 174px;
+  background-color: #FFFFFF;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url("../icons/select.svg") no-repeat;
+  background-position: 87% 50%;
+}
+
+.period__time {
+  font-family: "Proxima Nova";
+  font-size: 14px;
+  line-height: 1.6428571429;
+  font-weight: normal;
+  color: #8D94A4;
+  margin-right: 4px;
+}
+
+.tourists__header {
+  text-align: center;
+  font-family: "Proxima Nova";
+  font-size: 22px;
+  line-height: 1;
+  font-weight: 600;
+  color: #001237;
+  margin-bottom: 24px;
+}
+
+.tourists__info {
+  background-color: #F1F8FE;
+  border: 1px solid #DEE5EC;
+  border-radius: 12px;
+  padding: 24px 30px 32px 30px;
+  max-height: 161px;
+}
+
+.tourist__number {
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.6428571429;
+  color: #94A1AF;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+
+.tourist__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.tourist__birthday {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 200px;
+}
+
+.tourist__goal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 76%;
+}
+
+.tourist__target {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url("../icons/select.svg") no-repeat;
+  background-color: #FFFFFF;
+  background-position: 97% 50%;
+}
+
+.new-tourist {
+  border: none;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 0;
+}
+
+.new-tourist:hover .new-tourist__union {
+  background-color: #1442AE;
+}
+
+.new-tourist__union {
+  width: 32px;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #2155CF;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.new-tourist__text {
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1;
+  color: #001237;
 }
