--- a/Strahovanie/src/sass/components/global.scss
+++ b/Strahovanie/src/sass/components/global.scss
@@ -34,3 +34,16 @@ body{
   font-weight: 700;
   @include font(46px, 50px);
 }
+
+.btn {
+  border-radius: 50px;
+  cursor: pointer;
+  @include font(16px, 16px);
+  font-family: $font-main;
+  font-weight: 600;
+  letter-spacing: 0.08em;
+
+  >span {
+    text-transform: uppercase;
+  }
+}
