--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -1966,3 +1966,68 @@ body {
   line-height: 1;
   color: #001237;
 }
+
+.advantages {
+  background-color: #F1F8FE;
+  padding: 50px 0 90px;
+}
+
+.advantages__header {
+  text-align: center;
+  line-height: 55px;
+  margin-bottom: 60px;
+}
+
+.advantages__wrapper {
+  max-width: 1446px;
+}
+
+.benefits {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.benefits__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.benefits__item:not(:last-child) {
+  min-width: 321px;
+}
+
+.benefits__wrapper {
+  height: 80px;
+  width: 80px;
+  border: 1px solid #D7E1E9;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 16px;
+}
+
+.benefits__description {
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.3;
+  color: #1A1B20;
+}
