--- a/Strahovanie/src/sass/components/confidence.scss
+++ b/Strahovanie/src/sass/components/confidence.scss
@@ -31,7 +31,15 @@
     margin-left: 2px;
   }
 
-  &__btn {
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0px;
+  }
+}
+
+.controller{
+  &__btn{
     background-color: $blue;
     width: 40px;
     height: 40px;
@@ -40,12 +48,6 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-  }
-
-  &__wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 0px;
   }
 }
 
