--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -16,6 +16,9 @@
 @import "components/faq.scss";
 @import "components/insurance-online.scss";
 
+@import "components/advantages.scss";
+@import "components/samples.scss";
+
 // offers
 @import "components/offers/greencard.scss";
 @import "components/offers/offers.scss";
@@ -30,4 +33,3 @@
 
 //tourism
 @import "components/tourism/insurance-tourism.scss";
-@import "components/tourism/advantages.scss";
