--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -677,7 +677,17 @@ body {
   margin-left: 2px;
 }
 
-.confirence__btn {
+.confirence__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 50px 0px;
+}
+
+.controller__btn {
   background-color: #2155CF;
   width: 40px;
   height: 40px;
@@ -692,16 +702,6 @@ body {
   -ms-flex-pack: center;
   justify-content: center;
   cursor: pointer;
-}
-
-.confirence__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 50px 0px;
 }
 
 .review {
@@ -998,6 +998,111 @@ body {
 
 .description__text:not(:last-child) {
   margin-bottom: 25px;
+}
+
+.advantages {
+  background-color: #F1F8FE;
+  padding: 50px 0 90px;
+}
+
+.advantages__header {
+  text-align: center;
+  line-height: 55px;
+  margin-bottom: 60px;
+}
+
+.advantages__wrapper {
+  max-width: 1446px;
+}
+
+.benefits {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.benefits__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.benefits__item:not(:last-child) {
+  min-width: 321px;
+}
+
+.benefits__wrapper {
+  height: 80px;
+  width: 80px;
+  border: 1px solid #D7E1E9;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 16px;
+}
+
+.benefits__description {
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.3;
+  color: #1A1B20;
+}
+
+.samples {
+  padding: 90px 0 107px;
+}
+
+.samples__header {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.samples__sort {
+  max-width: 392px;
+  margin: 0 auto 40px;
+}
+
+.samples__sort > li {
+  width: 50%;
+}
+
+.samples__nav {
+  display: none;
+}
+
+.sample {
+  width: 360px;
+  height: 354px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.16);
+  box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.16);
+  border-radius: 10px;
+  background-color: #FFFFFF;
 }
 
 .greencard {
@@ -1965,69 +2070,4 @@ body {
   font-size: 16px;
   line-height: 1;
   color: #001237;
-}
-
-.advantages {
-  background-color: #F1F8FE;
-  padding: 50px 0 90px;
-}
-
-.advantages__header {
-  text-align: center;
-  line-height: 55px;
-  margin-bottom: 60px;
-}
-
-.advantages__wrapper {
-  max-width: 1446px;
-}
-
-.benefits {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.benefits__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.benefits__item:not(:last-child) {
-  min-width: 321px;
-}
-
-.benefits__wrapper {
-  height: 80px;
-  width: 80px;
-  border: 1px solid #D7E1E9;
-  border-radius: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-right: 16px;
-}
-
-.benefits__description {
-  font-family: "Proxima Nova";
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.3;
-  color: #1A1B20;
 }
