--- a/Strahovanie/src/sass/components/samples.scss
+++ b/Strahovanie/src/sass/components/samples.scss
@@ -1,33 +1,23 @@
 .samples {
-  padding: 90px 0 107px;
-  // .samples__container
-
-  // &__container {}
-
-  // // .samples__header
+  padding: 93px 0 40px;
 
   &__header {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 52px;
   }
-
-  // // .samples__sort
 
   &__sort {
     max-width: 392px;
+    max-height: 46px;
     margin: 0 auto 40px;
     >li{
       width: 50%;
+      button > span{
+        font-weight: 600;
+      }
     }
   }
-
-  // // .samples__slider
-
-  // &__slider {}
-
-  // // .samples__document
-
-  // &__document {}
+  
   &__nav{
     display: none;
   }
@@ -43,8 +33,4 @@
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.16);
   border-radius: 10px;
   background-color: $white;
-
-//   // .sample__img
-
-//   &__img {}
 }
