--- a/Strahovanie/src/sass/components/insurance-arrange.scss
+++ b/Strahovanie/src/sass/components/insurance-arrange.scss
@@ -1,12 +1,12 @@
 .swiper-pagination-progressbar{
   position: absolute;
-  max-width: 780px;
+  max-width: 100%;
   background-color: #C0C2C3;
 }
 .swiper-horizontal>.swiper-pagination-progressbar,
 .swiper-pagination-progressbar.swiper-pagination-horizontal{
   height: 1px;
-  left: 23.5%;
+  left: 0;
   top: 35%;
 }
 :root {
@@ -41,6 +41,7 @@
   margin-bottom: 80px;
 
   &__menu {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
